--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Kexecboot is a nice Linux-As-a-Bootloader implementation based on kexec.
 
-Read more on http://kexecboot.org
+Read more on the wiki: https://github.com/kexecboot/kexecboot/wiki
