--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Kexecboot is a nice Linux-As-a-Bootloader implementation based on kexec.
 
 Read more on the wiki: https://github.com/kexecboot/kexecboot/wiki
+
+NOTE: Though there are no commits for years we're still alive. Feel free to improve and PR back!
